minikube_ingress_svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plotly
  labels:
    app: plotly
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plotly
  template:
    metadata:
      labels:
        app: plotly
    spec:
      containers:
      - name: plotly-container
      - image: olufemib/plotly_image
---
apiVersion: v1
kind: Service
metadata:
  name: plotly
spec:
  selector:
    app: plotly
  ports:
    - port: 5000
      targetPort: 5000
  type: LoadBalancer
---
 
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plotly-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: plotly
                port:
                  number: 5000
